[project]
name = "grok-jr-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.1.2",
    "langchain-xai>=1.1.0",
    "langgraph>=1.0.4",
    "pyaudio>=0.2.14",
    "pyserial>=3.5",
    "python-dotenv>=1.2.1",
    "roarm-sdk>=0.1.0",
    "websockets>=15.0.1",
    "ws>=0.3.2",
    "xai-sdk>=1.5.0",
]
